; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_sriov.c_bnx2x_vfop_qctor_dump_tx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_sriov.c_bnx2x_vfop_qctor_dump_tx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2x = type { i32 }
%struct.bnx2x_virtf = type { i32 }
%struct.bnx2x_queue_init_params = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }
%struct.bnx2x_queue_setup_params = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { i32 }

@BNX2X_MSG_IOV = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [89 x i8] c"VF[%d] Q_SETUP: txq[%d]-- vfsb=%d, sb-index=%d, hc-rate=%d, flags=0x%lx, traffic-type=%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bnx2x_vfop_qctor_dump_tx(%struct.bnx2x* %0, %struct.bnx2x_virtf* %1, %struct.bnx2x_queue_init_params* %2, %struct.bnx2x_queue_setup_params* %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.bnx2x*, align 8
  %8 = alloca %struct.bnx2x_virtf*, align 8
  %9 = alloca %struct.bnx2x_queue_init_params*, align 8
  %10 = alloca %struct.bnx2x_queue_setup_params*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.bnx2x* %0, %struct.bnx2x** %7, align 8
  store %struct.bnx2x_virtf* %1, %struct.bnx2x_virtf** %8, align 8
  store %struct.bnx2x_queue_init_params* %2, %struct.bnx2x_queue_init_params** %9, align 8
  store %struct.bnx2x_queue_setup_params* %3, %struct.bnx2x_queue_setup_params** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %13 = load i32, i32* @BNX2X_MSG_IOV, align 4
  %14 = load %struct.bnx2x_virtf*, %struct.bnx2x_virtf** %8, align 8
  %15 = getelementptr inbounds %struct.bnx2x_virtf, %struct.bnx2x_virtf* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %11, align 4
  %18 = load i32, i32* %12, align 4
  %19 = load %struct.bnx2x_queue_init_params*, %struct.bnx2x_queue_init_params** %9, align 8
  %20 = getelementptr inbounds %struct.bnx2x_queue_init_params, %struct.bnx2x_queue_init_params* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.bnx2x_queue_init_params*, %struct.bnx2x_queue_init_params** %9, align 8
  %24 = getelementptr inbounds %struct.bnx2x_queue_init_params, %struct.bnx2x_queue_init_params* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.bnx2x_queue_setup_params*, %struct.bnx2x_queue_setup_params** %10, align 8
  %28 = getelementptr inbounds %struct.bnx2x_queue_setup_params, %struct.bnx2x_queue_setup_params* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.bnx2x_queue_setup_params*, %struct.bnx2x_queue_setup_params** %10, align 8
  %31 = getelementptr inbounds %struct.bnx2x_queue_setup_params, %struct.bnx2x_queue_setup_params* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @DP(i32 %13, i8* getelementptr inbounds ([89 x i8], [89 x i8]* @.str, i64 0, i64 0), i32 %16, i32 %17, i32 %18, i32 %22, i32 %26, i32 %29, i32 %33)
  ret void
}

declare dso_local i32 @DP(i32, i8*, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
